--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=Students
-spring.datasource.url=jdbc:mysql://localhost:3306/bd_crud
-spring.datasource.username=root
-spring.datasource.password=1709-1337-MrJC
+#spring.datasource.url=jdbc:mysql://localhost:3306/bd_crud
+#spring.datasource.username=root
+#spring.datasource.password=1709-1337-MrJC
+export spring.datasource.url=${SPRING_DATASOURCE_URL}
+export spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+export spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #Hibernate ddl auto (create, create-drop, validate, update)
@@ -11,3 +14,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+
+server.port=${PORT:8080}
