--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 		<artifactId>junit-jupiter-engine</artifactId>
 		<scope>test</scope>
 	</dependency>
+	
+	<dependency>
+		<groupId>org.thymeleaf.extras</groupId>
+		<artifactId>thymeleaf-extras-springsecurity6</artifactId>
+	</dependency>
    
 	</dependencies>
 
