--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,21 @@
 spring.application.name=Students
-spring.datasource.url=jdbc:mysql://localhost:3306/bd_crud
+
+#Database connection settings
+spring.datasource.url=jdbc:mysql://localhost:3306/bd_crud?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=1709-1337-MrJC
 #spring.datasource.url=${SPRING_DATASOURCE_URL}
 #spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 #spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
+#Spring JPA config
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
+#Server config
 server.port=${PORT:8080}
