--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=Students
 
 #Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/bd_crud?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=1709-1337-MrJC
-#spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+#spring.datasource.url=jdbc:mysql://localhost:3306/bd_crud?useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=1709-1337-MrJC
+spring.datasource.url=jdbc:mysql://${SPRING_DATASOURCE_HOST}:${SPRING_DATASOURCE_PORT}/${SPRING_DATASOURCE_NAME}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.name=bd_crud
 
 #Spring JPA config
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -19,3 +20,9 @@ logging.level.org.hibernate.type=TRACE
 
 #Server config
 server.port=${PORT:8080}
+
+#Heroku JawsDB
+#mysql://g4l5eqo4oghsivwz:uyb7f1hvb5xhsp5s@q2gen47hi68k1yrb.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/b40xvu6u0xpx9gep
+#spring.datasource.url=jdbc:mysql://q2gen47hi68k1yrb.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/b40xvu6u0xpx9gep?useSSL=true&allowPublicKeyRetrieval=true
+#spring.datasource.username=g4l5eqo4oghsivwz
+#spring.datasource.password=uyb7f1hvb5xhsp5s
