--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=Students
 
+#GitHub Login
+spring.security.oauth2.client.registration.github.client-id=Ov23liPlkNVvtVEKgmYv
+spring.security.oauth2.client.registration.github.client-secret=fec4861f2ad7252408d73364e0a713ed92d7b2fb
+
+#Google Login
+
+
 #Database connection settings
 #spring.datasource.url=jdbc:mysql://localhost:3306/bd_crud?useSSL=false&allowPublicKeyRetrieval=true
 #spring.datasource.username=root
@@ -17,6 +24,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+logging.level.org.springframework.security=TRACE
 
 #Server config
 server.port=${PORT:8080}
