oauth2 new commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Students
 #GitHub Login
 spring.security.oauth2.client.registration.github.client-id=Ov23liPlkNVvtVEKgmYv
 spring.security.oauth2.client.registration.github.client-secret=fec4861f2ad7252408d73364e0a713ed92d7b2fb
-github.redirect-uri=https://coffeeshopfinder-aeb0c911fd65.herokuapp.com/oauth2/callback
+#github.redirect-uri=https://coffeeshopfinder-aeb0c911fd65.herokuapp.com/oauth2/callback
 #Google Login
 
 
